<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_logo"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InicioSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/komail"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/card_login"
            android:layout_width="367dp"
            android:layout_height="216dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_correo"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/log_edt_user"
                android:layout_width="match_parent"
                android:backgroundTint="#FFFFFF"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_contrase_a"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/log_edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="#FFFFFF"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login_iniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rounded"
                android:text="Iniciar"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cliente"
        android:layout_width="315dp"
        android:layout_height="113dp"
        android:background="@drawable/button_rounded_red"
        android:text="@string/txt_coprar_ya"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ir_repartidor"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/txt_repartidores"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_ir_tortilleria"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/txt_tortilleria"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_socio"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_repartidor_tortillas"
            android:textColor="@color/amarillo"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_atras"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/buscas_trabajo"
            android:textColor="@color/amarillo"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>